Renamed testing to test

--- a/main/h1.html
+++ b/main/h1.html
@@ -14,7 +14,7 @@
       <body>
         <div>
             <a id="a1" href="../offical/h1.html"><button id="b1">Offical Websites</button></a>
-            <a href="../testing/h1.html"><button id="b2">Tests</button></a>
+            <a href="../test/h1.html"><button id="b2">Tests</button></a>
         </div>
       </body>
 
