--- a/test/h1.html
+++ b/test/h1.html
@@ -3,12 +3,14 @@
     <html>
     <link rel="stylesheet" href="c1.css">
       <head>
-        <title>Damien's Website | Error 404</title>
+        <title>Damien's Website | Testing</title>
       </head>
 
       <header>
-        <h1>Nothing here.. oops.</h1>
-        <img src="https://www.google.com/images/errors/robot.png" alt="">
+        <h1>Tests!</h1>
+        <div >
+          <a href="./test1/h1.html"><button>Test 1</button></a>
+        </div>
         <a href="../main/h1.html"><button id="b1">Go back to home page</button></a>
     </header>
 
